syntax = "proto3";

package aggregator;

import "google/protobuf/empty.proto";

service Aggregator {
    rpc RunLanguageDetection (google.protobuf.Empty) returns (google.protobuf.Empty) {
    }

    rpc RunAggregation (google.protobuf.Empty) returns (google.protobuf.Empty) {
    }

    rpc SyncEntities (google.protobuf.Empty) returns (google.protobuf.Empty) {
    }

    rpc SyncSeeds (google.protobuf.Empty) returns (google.protobuf.Empty) {
    }
}